fixup! userWidget: Pack vertically and align in the center
Username font-size should match with date's font-size which is
16pt.

--- a/data/theme/gnome-shell-sass/_common.scss
+++ b/data/theme/gnome-shell-sass/_common.scss
@@ -2021,8 +2021,7 @@ StScrollBar {
   .login-dialog-username,
   .user-widget-label {
     color: $osd_fg_color;
-    font-size: 11pt;
-    font-weight: bold;
+    font-size: 16pt;
     text-align: center;
     padding-top: 24px;
   }
